tests/rosetta/out/Pascal/atomic-updates.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/atomic-updates.pas
atomic-updates.pas(14,26) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
atomic-updates.pas(15,41) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
atomic-updates.pas(15,52) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
atomic-updates.pas(15,52) Note: Call to subroutine "operator mod(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
atomic-updates.pas(15,52) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
atomic-updates.pas(23,29) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
atomic-updates.pas(24,41) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
atomic-updates.pas(24,52) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
atomic-updates.pas(24,52) Note: Call to subroutine "operator mod(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
atomic-updates.pas(24,52) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
atomic-updates.pas(55,7) Error: Identifier not found "i"
atomic-updates.pas(55,7) Error: Ordinal expression expected
atomic-updates.pas(55,7) Error: Illegal counter variable
atomic-updates.pas(57,27) Error: Identifier not found "_appendList"
atomic-updates.pas(57,55) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
